BUG FIXED: mobile menu is opened on small screen and then screen is resized

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -450,10 +450,6 @@
         padding: 0px 16px;
     }
 
-    .jumbo-box .c-navbar ul li:last-child {
-        display: none;
-    }
-
     .nav-opener {
         display: block;
     }
